arreglos a los doc de la API y Product DOCS API
